--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 
 <!-- NAV Start -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-light navbar-expand-lg bg-body-tertiary"
+            style="color: #262421;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Modern Americana</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,13 +46,13 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images/high_places-DS.jpg" class="d-block w-100" alt="High Places by Dave Santillanes">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images/into_distance-MMC.jpg" class="d-block w-100" alt="Into The Distance by Matt McCormick">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images/sono_mag-MM.png" class="d-block w-100" alt="Sonoran Magnetismby Mark Maggiori">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
