--- a/featured.html
+++ b/featured.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="YOUR DESCRIPTION HERE">
@@ -19,7 +23,7 @@
 
 
 <!-- NAV Start -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Modern Americana</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,13 +41,54 @@
 </nav>
 <!-- NAV end -->
 
-<h1>Featured Artists go here</h1>
+<h1>Featured Artists</h1>
+
+<section id="markmaggiori">
+  <div class="row">
+        <div class="col-md-3">
+        <img class="img-fluid" src="images/markmaggiori_portrait.webp" alt="photo of Mark Maggiori">
+        <h3>Mark Maggiori</h3>
+        </div>
+
+        <div class="col-md-9">
+          <p>Mark Maggiori is a French-American artist renowned for his evocative oil paintings that capture the rugged beauty and timeless spirit of the American West. Born on June 16, 1977, in Fontainebleau, France, Maggiori's early exposure to art came through his formal training at the Académie Julian in Paris, where he honed his skills in academic drawing .
+          His journey into Western art began at the age of 15 during a transformative road trip across the United States. This experience ignited a lasting fascination with the American Southwest, influencing his later artistic endeavors. Before dedicating himself to painting, Maggiori was the lead vocalist and creative force behind the French nu-metal band Pleymo, contributing to music videos and album artwork .</p>
+        </div>
+  </div>
+</section>
+
+<section id="mattmccormick">
+  <div class="row">
+        <div class="col-md-3">
+        <img class="img-fluid" src="images/mattmccormick_port.jpg" alt="photo of Matt McCormick">
+        <h3>Matt McCormick</h3>
+        </div>
+
+        <div class="col-md-9">
+          <p>McCormick's visual language fuses elements of Western iconography with urban detritus, creating compositions that act as palimpsests of cultural memory. His works often feature silhouettes of cowboys, fragmented signage, and expansive negative spaces, reflecting a landscape marked by erasure and reinvention. Rather than reconstructing lost narratives, his pieces evoke a shifting psychological terrain, where the West exists as both a subject and a surface. 
+          <br><br>
+          In his "Into the Distance" series, McCormick employs punk rock influences and experimental techniques, such as using faulty printers to create grainy textures, which he overlays with cowboy figures. This approach embraces imperfection, challenging the polished aesthetics prevalent in the digital age. The series, characterized by vivid, surreal color palettes, offers a contemporary reimagining of the American West. </p>
+        </div>
+  </div>
+</section>
 
 
-<!-- FOOTER start -->
-<footer>Trademark of xxxx
-All artwork is the property of the Artist and no commision is made from it's display</footer>
-<!-- FOOTER end -->
+<section id="davesantillanes">
+  <div class="row">
+        <div class="col-md-3">
+        <img class="img-fluid" src="images/davesantillanes_port.jpg" alt="photo of Dave Santillanes">
+        <h3>Dave Santillanes</h3>
+        </div>
+
+        <div class="col-md-9">
+          <p>Dave Santillanes is a Colorado-born landscape painter renowned for his atmospheric plein air works that capture the essence and spirit of the American West. Born in 1972 and raised at the base of the Rocky Mountains in Loveland, Colorado, Santillanes developed an early appreciation for the wilderness through activities like hiking, hunting, and backpacking. This connection to nature profoundly influences his artistic vision.
+          <br><br>After earning a BFA in Graphic Design from Colorado State University in 1995, Santillanes worked as a wildland firefighter and digital imaging technician. During this period, he began experimenting with oil painting, eventually transitioning to full-time artistry. His self-taught approach emphasizes direct observation and the sensory experience of painting outdoors, which he believes fosters a deeper connection to the landscape. Santillanes often begins his paintings with plein air studies, using them as references for studio works. He focuses on simplifying scenes into abstract shapes and capturing the interplay of color, light, and atmosphere to convey the essence of a place </p>
+        </div>
+  </div>
+</section>
+
+
+
 
 <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
