--- a/get-featured.html
+++ b/get-featured.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="YOUR DESCRIPTION HERE">
@@ -19,7 +23,7 @@
 
 
 <!-- NAV Start -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Modern Americana</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,12 +45,12 @@
 <div class="container">
  
   <div style="text-align:center">
-<h2> Get Featured </h2>
+<h1> Get Featured </h1>
   </div>
 
  <div class="row">
     <div class="column">
-      <img src="..." style="width:100%">
+      <img src="images/MA_logo.png" alt="modern americana logo" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
@@ -81,10 +85,6 @@
 
 
 
-<!-- FOOTER start -->
-<footer>Trademark of xxxx
-All artwork is the property of the Artist and no commision is made from it's display</footer>
-<!-- FOOTER end -->
 
 <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
