--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="YOUR DESCRIPTION HERE">
@@ -19,8 +23,8 @@
 
 
 <!-- NAV Start -->
-<nav class="navbar navbar-light navbar-expand-lg bg-body-tertiary"
-            style="color: #262421;">
+<nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary"
+            style="color: white;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Modern Americana</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,9 +76,7 @@
 <br>
 We aim to feature artists who we feel represent our values and their work demonstrates the truths of the American West</p>
 <!-- HOME end -->
-<footer>Trademark of xxxx
-All artwork is the property of the Artist and no commision is made from it's display</footer>
-<!-- FOOTER start -->
+
 
 <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
