--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="YOUR DESCRIPTION HERE">
-    <meta name="author" content="YOUR NAME HERE">
-    <title>Starter Template · Bootstrap v5.3.3</title>
+    <meta name="description" content="Modern Americana Gallery">
+    <meta name="author" content="Libby Pumphrey">
+    <title>Modern Americana</title>
 
     <!-- LOAD BOOTSTRAP CSS - DO NOT DELETE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
